# arcane

./: .gitignore  README.md  arcane.sh  notes.MD  package.json  pyproject.toml  syntax.MD
src/arcane/: main.py  utils.py
src/arcane/core/: animation_processor.py  constructs.py  interpreter.py  interpreter_types.py  parser.py  store.py  transfomer.py
src/arcane/core/models/: constructs.py
src/arcane/core/parsing/: grammar.lark  parser.py  process.py  transfomer.py
src/arcane/core/runtime/: interpreter.py  store.py  types.py
src/arcane/grammar/: arcane.lark
src/arcane/graphics/: animation.py  builder.py  config.py  constructor.py  layout.py  objects.py  scene.py  test.py  utils.py
src/arcane/graphics/custom_mobjects/: electrostatics.py  lens.py  rays.py
src/arcane/graphics/renderers/: geometry.py  (+3 more)
src/player/: api.py  arcane_prompt.py  main.py  test.py  video_file.py
src/test/: all_tests  compile_test_scripts.sh  define.arc  multiple_axis.arc  parametric_functions.arc  scratchpad.py  simple_math.arc  test.py  test_grammar.py
src/test/test_scripts/: area.arc  arrow.arc  brace.arc  carotid_and_rose.arc  cycloids.arc  define.arc  dot_sweep.arc  elbow.arc  electric.arc  fibonacci_lines.arc  function_test.arc  latex.arc  lines.arc  m_s_copy.arc  math_scratch_pad.arc  motion.arc  multiple_axis.arc  new.arc  op.arc  optics.arc  parametric_function_test.arc  polar.arc  relative_shapes.arc  rose.arc  scale_rotate.arc  scratch_pad.arc  shapes.arc  simple_math.arc  test.arc  test_redraw.arc  text.arc  transform.arc  vertical_lines.arc  waves.arc  waves_2.arc
(+4 files in other folders)
