[project]
name = "arcane"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "abundance", email = "abundanceanyanwu@gmail.com" }
]
dependencies = [
    "manim>=0.18.1",
    "lark>=1.2.2",
    "sympy>=1.13.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.5",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/arcane"]
